--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="appewtc.masterung.ungtraffic.DetailActivity">
+    tools:context="appewtc.masterung.ungtraffic.DetailActivity"
+    android:background="@drawable/bg0">
 
     <Button
         android:text="Back"
@@ -31,12 +32,37 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView4"
             android:textSize="@dimen/h1"
-            android:textStyle="normal|bold" />
+            android:textStyle="normal|bold"
+            android:textColor="@color/aText" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/traffic_01"
-            android:id="@+id/imageView2" />
+            android:id="@+id/imageView2"
+            android:layout_marginTop="20dp" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:padding="20dp"
+            android:background="#82080707">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView5"
+                    android:textSize="@dimen/h2"
+                    android:textStyle="normal|italic"
+                    android:textColor="@color/aText" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </RelativeLayout>
